--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
+    "history": "^4.6.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "react-router-redux": "^4.0.8",
+    "react-router": "^4.1.1",
+    "react-router-redux": "next",
     "redux": "^3.7.0",
     "redux-saga": "^0.15.4"
   },
